--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
+    implementation 'com.h2database:h2:2.2.224'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'net.datafaker:datafaker:2.1.0'
+    implementation 'redis.clients:jedis:5.1.1'
 }
 
 tasks.named('test') {
